[package]
name = "good-vs-evil-pvp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"]}
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
askama = { version = "0.15.1", default-features = false, features = ["std", "derive"] }
