[package]
name = "good-vs-evil-pvp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"]}
axum-extra = { version = "0.12.5", features = ["typed-header"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
askama = { version = "0.15.1", default-features = false, features = ["std", "derive"] }
headers = "0.4.1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-stream = "0.1"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
